tests/snapshots/examples_fixtures/type_system__failing__97_hm_fun_return_mismatch_contextual.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Return Type Mismatch

The body of this function does not match its return type.

  examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx:46:14
   |
46 |     let _f = if true {
   |              ^^^^^^^^^
47 |         ret_int
   | ^^^^^^^^^^^^^^^
   |         ------- this branch established the expected type
48 |     } else {
   | ^^^^^^^^^^^^
49 |         ret_string
   | ^^^^^^^^^^^^^^^^^^
   |         ---------- this branch conflicts with that type
50 |     }
   | ^^^^^

Note:
  declared return type: Int
  body type: String
  the `then` branch fixes the type expected from the whole `if`
  the `else` branch produces the competing type

Help:
  Change the return annotation to `-> String` or change the body.
== stdout ==
<not executed>
